--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
     "discord.js": "^11.6.4",
     "enmap": "^4.8.1",
     "express": "^4.16.4",
-    "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
     "figlet": "^1.2.1",
     "file-system": "^2.2.2",
     "forever": "^2.0.0",
     "fortnite": "^4.3.2",
     "fortnite-api": "^3.2.0",
-    "fs": "0.0.1-security",
     "fs-nextra": "^0.4.7",
     "get": "1.4.0",
     "get-youtube-id": "^1.0.1",
@@ -82,7 +80,13 @@
     "winston": "^3.2.1",
     "youtube": "^0.1.0",
     "youtube-info": "^1.3.2",
-    "ytdl-core": "^2.1.7"
+    "ytdl-core": "^2.1.7",
+    "distube": "^2.8.13",
+    "ffmpeg": "0.0.4",
+    "fs": "0.0.1-security",
+    "nodemon": "^2.0.7",
+    "opusscript": "0.0.8",
+    "spotify-url-info": "^2.2.0"
   },
   "engines": {
     "node": "10.x"
