--- a/package.json
+++ b/package.json
@@ -86,6 +86,14 @@
     "fs": "0.0.1-security",
     "nodemon": "^2.0.7",
     "opusscript": "0.0.8",
+    "ascii-table": "0.0.9",
+    "colors": "^1.4.0",
+    "discord.js": "^12.5.3",
+    "distube": "^2.8.13",
+    "ffmpeg": "0.0.4",
+    "fs": "0.0.1-security",
+    "nodemon": "^2.0.7",
+    "opusscript": "0.0.8",
     "spotify-url-info": "^2.2.0"
   },
   "engines": {
