--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "fs": "0.0.1-security",
     "nodemon": "^2.0.7",
     "opusscript": "0.0.8",
-    "spotify-url-info": "^2.2.0"
+    "spotify-url-info": "^2.2.0",
+    "@ksoft/api": "^3.1.9",
+    "youtube-sr": "^3.0.3",
+    "ytdl-core": "^4.4.5",
+    "canvas": "^2.8.0",
+    "discord.js-arbitrary-ffmpeg": "^1.1.0"
   },
   "engines": {
     "node": "10.x"
